sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (b<-deb to lgr-1){
  ^AlgSelectionSort:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return a
  ^